# xibalba

./: .gitignore  README.md  docker-compose.yml  flake.nix  impl-trait-utils.txt  justfile  package.json
docs/: doc.typ  genius-agena.md  genius-arena-2026.md  mundial-2026.md  peach.md  phase-1.typ  talent-hackathon-2026.md  todo.md  track.md  xibalbá.md
docs/architecture/: architecture.md  diagram-client.md  diagram-server.md  server-db.md
docs/dt/: deploy-ec2.md  idiomas.typ
docs/technical/: architecture-diagram-client.md  architecture-diagram-server.md  architecture.md
scripts/: ci.just  deploy.just  dev.just  test.just
src/client/: .gitignore  client.dockerfile  client.just  client.md  deno.json  docker-compose.yml  flake.nix  guide-daisyui.md  package.json  patch_auth.js  rune-lab--implementation-example.txt  rune-lab-spec-file.md  todo.md  tsconfig.json
src/client/AGENTS/: client-dev.md
src/client/apps/agent/: deno.json  svelte.config.js
src/client/apps/agent/src/: hooks.server.ts
src/client/apps/explorer/: deno.json  package.json  svelte.config.js  vite.config.ts
src/client/apps/explorer/AGENTS/: client-dev.md  guide-daisyui.md  steroids-spec.md
src/client/apps/explorer/src/: app.html  hooks.server.ts  hooks.ts  service-worker.ts
src/client/apps/explorer/static/: manifest.json
src/client/apps/vision/: agent.Dockerfile  deno.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
src/client/apps/vision/src/: app.html  hooks.server.ts  hooks.ts
src/client/inventory-src/: package.json
src/client/inventory-src/routes/: +layout.svelte
src/client/inventory-src/routes/mundial/: +layout@.svelte
src/client/scripts/: pwa-check.sh
src/client/sdk/core/: deno.json  package.json
src/client/sdk/core/src/: mod.ts
src/client/sdk/state/: deno.json  package.json
src/client/sdk/state/src/: mod.ts
src/client/sdk/ui/: deno.json  package.json  svelte.config.ts  tsconfig.json  vite.config.ts
src/client/sdk/ui/src/: mod.ts
src/server/: db.Dockerfile  docker-compose.yml  fix-test-suite.md  flake.nix  justfile  old.flake.nix  phase 2.md  server.just  server.md  test_query.sh  todo.md
src/server/api/: Cargo.toml
src/server/api/core/xibalba-domain/: Cargo.toml
src/server/api/core/xibalba-domain/src/entities/: document.rs  inventory.rs  mod.rs  user.rs
src/server/api/core/xibalba-surreal/: Cargo.toml
src/server/api/core/xibalba-surreal/src/: client.rs  lib.rs
src/server/api/core/xibalba-surreal/src/repos/: auth.rs  inventory.rs  mod.rs
src/server/api/services/balam/: Cargo.toml
src/server/api/services/balam-wasm/: Cargo.toml
src/server/api/services/balam-wasm/src/: lib.rs
src/server/api/services/balam/src/: lib.rs  main.rs
src/server/api/services/balam/src/adapters/: mod.rs
src/server/api/services/balam/src/adapters/documents/typst/: compiler.rs
src/server/api/services/balam/src/adapters/http/: app_error_impl.rs  app_state.rs  mod.rs
src/server/api/services/balam/src/adapters/http/middleware/: auth.rs  logger.rs
src/server/api/services/balam/src/adapters/http/routes/: auth.rs  documents.rs  inventory.rs
src/server/api/services/balam/src/application/: app_error.rs
src/server/api/services/balam/src/application/use_cases/: auth.rs  documents.rs  inventory.rs  mod.rs
src/server/api/services/balam/src/infra/: app.rs  config.rs  setup.rs
src/server/db/: db.Dockerfile  docker-compose.yml  entrypoint.sh  seed.surql  test_query.sh
src/server/db/init/01-schema/: 01-tables.surql  02-fields.surql
src/server/db/scripts/: entrypoint.sh  init-db.sh  query_event.sh
src/server/db/test/: fixtures.sh  run-all.sh
src/server/engine/: Cargo.toml
src/server/engine/core/domain/: Cargo.toml
src/server/engine/core/domain/src/: lib.rs  test_trait.rs
src/server/engine/core/domain/src/entities/: business.rs  category.rs  city.rs  document.rs  inventory.rs  mod.rs  review.rs  user.rs
src/server/engine/core/domain/src/ports/: auth.rs  business.rs  documents.rs  inventory.rs  mod.rs  review.rs
src/server/engine/core/store/: Cargo.toml
src/server/engine/core/store/src/: client.rs  lib.rs  tests.rs
src/server/engine/core/store/src/repos/: auth.rs  business.rs  inventory.rs  mod.rs  review.rs
src/server/engine/services/api/: Cargo.toml
src/server/engine/services/api/src/: main.rs
src/server/engine/services/api/src/adapters/: mod.rs
src/server/engine/services/api/src/adapters/crypto/: argon2.rs
src/server/engine/services/api/src/adapters/documents/typst/: compiler.rs
src/server/engine/services/api/src/adapters/http/: app_error_impl.rs  app_state.rs
src/server/engine/services/api/src/adapters/http/middleware/: auth.rs  logger.rs
src/server/engine/services/api/src/adapters/http/routes/: auth.rs  businesses.rs  documents.rs  inventory.rs  mod.rs  recommendations.rs  reviews.rs
src/server/engine/services/api/src/application/: app_error.rs  mod.rs
src/server/engine/services/api/src/application/use_cases/: auth.rs  documents.rs  inventory.rs  mod.rs
src/server/engine/services/api/src/infra/: app.rs  config.rs  setup.rs
src/server/engine/services/wasm/: Cargo.toml  build-wasm.just  justfile
src/server/engine/services/wasm/src/: lib.rs
(+240 files in other folders)
