[workspace]
resolver = "2"
members = [
    "core/xibalba-domain",
    "core/xibalba-surreal",
    "services/balam",
    "services/balam-wasm",
]

[workspace.dependencies]
# Runtime
tokio = { version = "1.50.0", features = ["full"] }
# Web
axum = { version = "0.8.8" }
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
# DB
surrealdb = { version = "3.0.2" }
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
# Auth
jsonwebtoken = { version = "10.3.0" }
argon2 = { version = "0.5.3" }
# Observability
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
# Error handling
thiserror = { version = "2.0.18" }
anyhow = { version = "1.0.102" }
# Utils
uuid = { version = "1.22.0", features = ["v4", "js", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
# WASM
wasm-bindgen = { version = "0.2.114" }
serde-wasm-bindgen = { version = "0.6.5" }
# Axion
axion = { version = "0.0.4" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
