[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../../core/domain" }
store = { path = "../../core/store" }

# HTTP
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axion = { workspace = true }

# Async runtime
tokio = { workspace = true }

# SurrealDB
surrealdb = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
secrecy = { workspace = true }
